# qt-chess

./: .gitignore  README.md
src/: CMakeLists.txt  ~$象棋详细设计文档.doc  卡里象棋详细设计文档.doc
src/chess_engine/: CMakeLists.txt  CrChessPlay.cpp  CrChessPlay.h  cannon.cpp  cannon.h  chariot.cpp  chariot.h  chessbase.cpp  chessbase.h  global.cpp  global.h  horse.cpp  horse.h  king.cpp  king.h  minister.cpp  minister.h  official.cpp  official.h  soldier.cpp  soldier.h
src/chess_play/: CMakeLists.txt  CrChessPlay.cpp  CrChessPlay.h
src/chess_window/: CMakeLists.txt  application.qrc  chess_ui_helper.cpp  chess_ui_helper.h  mainwindow.cpp  mainwindow.h
src/cpplog/: CMakeLists.txt  Log.cpp  Log.h  README.md  test_main.cpp
src/fen/: CMakeLists.txt  CrFenHelper.cpp  CrFenHelper.h
